[tool.poetry]
name = "unseenest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scipy = "^1.6.0"
numpy = "^1.19.5"
statsmodels = "^0.12.1"
networkx = "^2.5"
matplotlib = "^3.3.3"
cvxopt = "1.2.5"

[tool.poetry.dev-dependencies]
black = "^21.4b2"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
